welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: value lenth is not a member of Array[java.awt.Color]
	for (i<-0 to T.lenth -1){
                       ^Array1:16: error: value lenth is not a member of Array[java.awt.Color]
	for (i<-0 to T.lenth -1) {
                       ^